--- a/src/pages/houses/houses.scss
+++ b/src/pages/houses/houses.scss
@@ -1,3 +1,12 @@
+.housesContentLoader{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .housesContent{
   display: inline;
   justify-content: center;
